--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "gatsby-gitbook",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "GitBook style modern docs/tutorial websites using Gatsby + MDX",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -13,18 +13,35 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "@emotion/core": "^10.0.21",
+    "@emotion/styled": "^10.0.17",
+    "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^1.5.1",
+    "emotion-theming": "^10.0.19",
     "gatsby": "^2.16.1",
+    "gatsby-plugin-emotion": "^4.1.12",
+    "gatsby-plugin-mdx": "^1.0.52",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sharp": "^2.2.31",
+    "gatsby-plugin-sitemap": "^2.2.19",
+    "gatsby-plugin-theme-ui": "^0.2.43",
+    "gatsby-remark-copy-linked-files": "^2.1.28",
+    "gatsby-remark-images": "^3.1.28",
+    "gatsby-source-filesystem": "^2.1.33",
+    "lodash.startcase": "4.4.0",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1",
+    "theme-ui": "^0.2.44"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/dreamtheater2195/gatsby-gitbook"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/dreamtheater2195/gatsby-gitbook/issues"
   }
 }
