--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
-    "theme-ui": "^0.2.44"
+    "theme-ui": "^0.2.44",
+    "is-absolute-url": "3.0.3"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
